--- a/DPP.ipynb
+++ b/DPP.ipynb
@@ -77,13 +77,9 @@
     "random_indices=np.random.choice(X.shape[0], m, replace=False)\n",
     "for i in random_indices:\n",
     "    rX.append(X[i])\n",
-    "# print(\"Sampled Points:\", sampled_points)\n",
-    "# print(\"Weights:\", weights)\n",
-    "\n",
     "#plot the sampled points\n",
     "import matplotlib.pyplot as plt\n",
     "plt.scatter(X[:,0],X[:,1],label='Original Data')\n",
-    "#point shoould be bigger if it has more weight\n",
     "plt.scatter(sampled_points[:,0],sampled_points[:,1],label='Sampled Points')\n",
     "\n",
     "plt.show()\n",
@@ -243,8 +239,8 @@
     "    data_points.extend(flattened_images)\n",
     "    labels_list.extend(labels.numpy())\n",
     "\n",
-    "data_points = np.array(data_points)  # Convert to numpy array\n",
-    "labels_list = np.array(labels_list)  # Convert to numpy array\n",
+    "data_points = np.array(data_points)  \n",
+    "labels_list = np.array(labels_list) \n",
     "print(data_points.shape)\n",
     "print(labels_list.shape)"
    ]
@@ -266,7 +262,7 @@
     "            total += labels.size(0)\n",
     "            correct += (predicted == labels).sum().item()\n",
     "    accuracy = correct / total\n",
-    "    return accuracy# Evaluate the model trained on the coreset"
+    "    return accuracy"
    ]
   },
   {
@@ -328,8 +324,6 @@
     "    dummy_model = CNN()\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer_coreset = optim.Adam(dummy_model.parameters(), lr=0.001)\n",
-    "    #weight of each data point is len total data points/len of coreset data points\n",
-    "    #randomly genrerate i indices from the data points\n",
     "    random_indices = np.random.choice(len(train_data), i, replace=False)\n",
     "    # print(\"AAAAAAAAA\",len(random_indices))\n",
     "    random_data=[]\n",
@@ -389,26 +383,6 @@
     "plt.ylabel('Accuracy')\n",
     "plt.title('DPP Coreset vs Random Points')\n",
     "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coreset_data_points=[]\n",
-    "for i in indices:\n",
-    "    coreset_data_points.append(train_data[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coreset_train_loader = DataLoader(coreset_data_points, batch_size=64, shuffle=True)"
    ]
   }
  ],
